Fix help page sidebar on mobile

--- a/static/help.css
+++ b/static/help.css
@@ -26,6 +26,15 @@
   color: var(--nav-link-hover);
 }
 
+.grid {
+  grid-template-areas:
+    "h"
+    "s"
+    "c"
+    "f"
+  ;
+}
+
 @media (min-width: 840px) {
   .grid {
     grid-template-areas:
